--- a/learn/make/k/makefile
+++ b/learn/make/k/makefile
@@ -6,11 +6,14 @@ main:main.o
 	
 #  ^^^  上面的语言默认执行	g++ -c -o main main.cpp
 #  VVV  下面等于重新定义了默认的 编译操作	
-.cpp.o:
-	g++  -c     -o    $@ $<
-	echo "2222"
-	
- 
+#.cpp.o:
+#	g++  -c     -o    $@ $<
+#	echo "2222"
+#-----------------------------------------------------------------------------------------------------------------------
+#obj :=$(src:.c=.o)                  ##将src 中所有 .c 替换为 .o
+#main:$(obj)
+#	gcc -g -o main $(obj)   ##此时  obj = main.o <--对于  .o   文件会默认寻找 .c  文件并编译 为  .o文件
+#-------------------------------------------------------------------- ---------------------------------------------------
 # .cpp.o:  =====等价于====  %.o : %.cpp
                      	 
 #  .cpp.o:
