--- a/Learn/program/make/makefile
+++ b/Learn/program/make/makefile
@@ -9,6 +9,7 @@ all:main.cpp
 #使用	     				            	 静态库				 动态库     运行路径
 #  静态库使用 方式1  直接写路径   ./lib/do 
 #  静态库使用 方式2  -L(太扯淡） 必须库文件名为 lib<名称>.a 形式否则找不到
+#  对于鄙视lib**.o lib**.so 命名的库  直接不加-l -L 写路径编译（2021-1-28）
 #  动态库 需要指定 -rpath 运行时目录  Wl 选项(把 选项 option 传递给 连接器.  如果 option 中 含有 逗号, 就在 逗号 处 分割成 多个 选项)
 #  -rpath,./lib @@中间不要空格
 
